style: prettier 재적용 (#122)